MDEV-5778: Valgrind failure in innodb_ext_keys.test - Fix valgrind failure: make test_if_order_by_key() account for extended keys   feature.